refactor: brushed up a little the cli implementation